--- a/components/channels/assets/channels.css
+++ b/components/channels/assets/channels.css
@@ -11,3 +11,36 @@
     width: 100%;
     height: 4rem;
 }
+
+.select_holder {
+    margin: 5px 0 0;
+    padding: 3px;
+    border: 1px solid #757ca5;
+    display:none;
+}
+
+
+#channels_select_dt thead {
+	display: none;
+}
+
+.select_holder.active #channels_select_dt {
+	display: block;
+}
+#channels_display_list {
+	cursor: pointer;
+}
+
+.select_holder .btn-group {
+    width: 100%;
+}
+.select_holder .dataTables_wrapper {
+    margin-top: 10px;
+}
+.channel_select_td {
+    text-align: center;
+    width: 6%;
+}
+.channel_select_td .la {
+    color:#2c77f4;
+}
