--- a/media/assets/css/shortease.css
+++ b/media/assets/css/shortease.css
@@ -500,3 +500,12 @@
     height: 2000px;
 	background-color: black;    
 }
+
+.sh_pic_cover{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 999993;
+}
