--- a/media/assets/css/shortease.css
+++ b/media/assets/css/shortease.css
@@ -359,12 +359,13 @@
 	background-color: #ffffffd1;
     padding: 0 0.6em;
     box-sizing: border-box;	
+    height: 2.2em;
 }
 
 .sh_art_details .sh_title {
     font-size: 1.4em;
    	margin: 0 6% ;
-	line-height: 1.6em;
+	line-height: 2.2em;
 }
 .sh_art_details .sh_description { 
     font-size: 1.2em;
@@ -380,8 +381,10 @@
 .sh_art_details .sh_price {
     font-size: 1.2em;
     margin: 6px 6% 20px 6%;
-	line-height: 1.4em;
+	line-height: 2.2em;
     display: inline-block;
+	height: 2.2em;
+    width: 45vw;    
 }
 .sh_art_details .sh_price .pr_val {
     font-size: 1em;
@@ -392,34 +395,26 @@
     line-height: 1.8em;
     font-size: 1.4em;
     display: inline-block;
-    background-color: #254554;
     color: #ffffff;
-    padding: 0 1em;
     margin: 0 6% 10px 6%;
     float: left;
-    border-radius: 10px;
+    background: url(//m.shortease.com/media/images/shop_btn.png) no-repeat;
+    width: 51vw;
+    height: 7vh;
+    background-size: contain;
 }
 .btn_show_descr {
- /*   float: right;
-    line-height: 1.8em;
-    font-size: 1.4em;
-    background-color: #254554;
-    padding: 0 1em;
-    color: #ffffff;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;*/
     position: absolute;
-    left: 0;
     right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
     bottom: 0px;
     text-align: center;
-    background-color: #ffffffd1; 
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+	background: url(//m.shortease.com/media/images/infob_btn.png) no-repeat;
+    width: 14vw;
+    height: 8vh;
+    background-size: contain;
+    margin: 0 6% 10px 6%;
 }
+
 .descr_arr_holder {
 	position: relative;
 	width: 100%;
